# klacz-ng

./: .gitignore  Dockerfile  README.md  create-base-image  create-images  fig-prod.yml  fig.yml  generate-proto-bindings  start
config/: gateway.json.dist  gateway_supervisord.conf  pick_supervisord.conf  supervisord.conf
ephemeral/: Ephemeral.hs  ephemeral.cabal
ephemeral/Ephemeral/: Client.hs  Ephemeral.hs  JSON.hs  Proto.hs
ephemeral/Ephemeral/Proto/: ClearRequest.hs  ClearResponse.hs  DeleteValueRequest.hs  DeleteValueResponse.hs  GetValueRequest.hs  GetValueResponse.hs  SetValueRequest.hs  SetValueResponse.hs  Status.hs
gateway/: Config.hs  Gateway.hs  Main.hs  gateway.cabal  gateway.py  run
gateway/twisted/plugins/: gateway_plugin.py
images/: Dockerfile_base  Dockerfile_gateway  Dockerfile_haskell  Dockerfile_pick  Dockerfile_python
klaczng/: rmq.py
klaczng/modules/: gateway.py  hello.py
lib/haskell/: klaczng-lib.cabal
lib/haskell/IRC/: GatewayCommand.hs  UserCommand.hs
lib/haskell/KlaczNG/: Helpers.hs
lib/haskell/KlaczNG/Ephemeral/: Proto.hs
lib/haskell/KlaczNG/Ephemeral/Proto/: ClearRequest.hs  ClearResponse.hs  DeleteValueRequest.hs  DeleteValueResponse.hs  GetValueRequest.hs  GetValueResponse.hs  SetValueRequest.hs  SetValueResponse.hs  Status.hs
lib/haskell/KlaczNG/IRC/: Proto.hs
lib/haskell/KlaczNG/IRC/Proto/: GatewayCommand.hs  IrcMessage.hs  SendGatewayMessageRequest.hs  SendGatewayMessageResponse.hs  UserCommand.hs
lib/python/: setup.py
lib/python/klaczng/: IRC.hs  irc_pb2.py  rmq.py  utils.py
lib/python/klaczng/IRC/: IrcMessage.hs
modules/_common/: rmq.py
modules/gateway/: gateway.py  run  start
modules/gateway/twisted/plugins/: gateway_plugin.py
modules/hello/: hello.py  run  start
modules/pick/: Main.hs  pick.cabal  run
modules/settings/: main.py  settings.json
modules/stateless/: Main.hs
persistent/: persistent.cabal  setup.py
persistent/Persistent/: Proto.hs
persistent/Persistent/Proto/: CreateEntryRequest.hs  CreateEntryResponse.hs  CreateTermRequest.hs  CreateTermResponse.hs  Entry.hs  GetEntriesRequest.hs  GetEntriesResponse.hs  GetTermRequest.hs  GetTermResponse.hs  Term.hs
persistent/persistent/: __init__.py  persistent_pb2.py  rpc.py  schema.py
proto/: ephemeral.proto  irc.proto  persistent.proto
scripts/: start-hello
stateless/: LICENSE  Main.hs  Stateless.hs  stateless.cabal
