name:                ephemeral
version:             0.1.0.0
synopsis:            In-memory ephemeral key-value store.
-- description:
homepage:            http://github.com/qwpx/klacz-ng
license:             GPL-3
license-file:        LICENSE
author:              Adam Michalik
maintainer:          adam@michalik.es
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ephemeral
  main-is:             Ephemeral.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, protopap, klaczng-lib,
                       unordered-containers, transformers, monads-tf
  -- hs-source-dirs:
  default-language:    Haskell2010