name:                stateless
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              klacz-ng creators
maintainer:          adam@michalik.es
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable stateless
  main-is:             Stateless.hs
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, text, text-icu, aeson,
                       bytestring >=0.10 && <0.11, containers,
                       transformers, transformers-base, monads-tf, lens,
                       cryptohash, protocol-buffers, protopap >= 0.1.0.2,
                       klaczng-lib, ephemeral, persistent,
                       lifted-base, zeromq4-haskell, monad-control,
                       optparse-applicative
  -- hs-source-dirs:
  default-language:    Haskell2010